--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,18 @@ android {
 
 dependencies {
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //Rxjava
+    implementation "io.reactivex.rxjava3:rxjava:3.1.2"
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     //Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
