--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,19 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
     //2GIS
-    //implementation 'ru.dgis.sdk:sdk-map:1.6.0'
+    //implementation 'ru.dgis.sdk:sdk-map:1.6'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //Rx
