--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@
 buildscript {
     repositories {
         maven {
-            url "http://artifactory.2gis.dev/sdk-maven-release"
+            url "http://maven.google.com/"
             setAllowInsecureProtocol(true)
         }
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0'
 
         // NOTE: Do not place your application dependencies here; they belong
