--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
     buildFeatures {
         viewBinding true
     }
+    compileSdkVersion 31
+    buildToolsVersion '30.0.2'
 }
 
 dependencies {
@@ -45,7 +47,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //Rx
-    implementation "io.reactivex.rxjava3:rxjava:3.1.2"
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
